--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
                 <h2 class="botoes__titulo">Acesse minhas redes:</h2>
 
-                <a class="botoes__link" href="">https://github.com/<img src="/assets/img/github.png" alt="icone do github">GitHub</a>
-                <a class="botoes__link" href="">https://www.linkedin.com/feed/?trk=sem-ga_campid.12619604099_asid.149519181115_crid.657343811713_kw.linkedin%20home_d.c_tid.kwd-17177616971_n.g_mt.e_geo.1001655<img src="/assets/img/linkedin.png" alt="icone dolinkdin">Linkedin</a>
-                <a class="botoes__link" href="">https://www.twitch.tv/alanzoka<img src="/assets/img/twitch.png" alt="icone da twitch">Twitch</a>
+                <a class="botoes__link" href="https://github.com/"><img src="/assets/img/github.png" alt="icone do github">GitHub</a>
+                <a class="botoes__link" href="https://www.linkedin.com/feed/?trk=sem-ga_campid.12619604099_asid.149519181115_crid.657343811713_kw.linkedin%20home_d.c_tid.kwd-17177616971_n.g_mt.e_geo.1001655"><img src="/assets/img/linkedin.png" alt="icone dolinkdin">Linkedin</a>
+                <a class="botoes__link" href="https://www.twitch.tv/alanzoka"><img src="/assets/img/twitch.png" alt="icone da twitch">Twitch</a>
     
             </div>
         </section>
